# your-own-agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
docs/: tutorial.md
examples/: 01-hello-world.yaml  02-sequential-pipeline.yaml  03-parallel-pipeline.yaml  04-permissions-demo.yaml  05-conditional-routing.yaml  06-multi-model.yaml  07-file-config.yaml  08-combined.yaml  09-model-routing.yaml  models.yaml
examples/goals/: analyze-code-quality.md  analyze-docs.md  autonomous-research.md  combine-report.md  create-plan.md  deploy.md  evaluate-and-score.md  evaluate-quality.md  fix-code.md  gather-info.md  hello-world.md  implement-plan.md  improve-text.md  integrate-and-verify.md  prepare-analysis.md  publish.md  research-with-shell.md  research.md  review-code.md  review-file.md  run-tests.md  summarize.md  test-and-fix.md  verify-fixes.md  write-fixes.md  write-function.md  write-implementation.md  write-report.md  write-tests.md
examples/goals/data-pipeline/: 01-ingest.md  02-clean.md  03-validate.md  04-transform.md  05-export.md  06-deep-clean.md  07-report.md  08-fix-errors.md  09-dashboard.md  10-recalculate.md
examples/permissions/: default.yaml  developer.yaml  full-access.yaml  read-only.yaml  read-write.yaml  reviewer.yaml  tester.yaml
examples/prompts/: agent_rules.md  autonomous-loop.md  autonomous-researcher.md  code-fixer.md  code-reviewer.md  principles.md  report-writer.md  researcher.md  security-engineer.md  tester.md
src/agentpipe/: __init__.py  __main__.py  config.py
src/agentpipe/cli/: main.py  models.py  pipelines.py  run.py  status.py
src/agentpipe/common/: __init__.py  conversation.py  tool_schema.py
src/agentpipe/core/: agent.py  condition.py  constraint.py  pipeline.py  task.py  visualize.py
src/agentpipe/execution/: agent_loop.py  conversation.py  engine.py  log_writer.py  recovery.py  runner.py  state.py
src/agentpipe/loader/: json_loader.py  yaml_loader.py
src/agentpipe/models/: http_session.py  provider.py  registry.py
src/agentpipe/schema/: __init__.py  conversation.py  tool_schema.py
src/agentpipe/storage/: definitions.py  (+1 more)
tests/: conftest.py  test_context_control.py  test_core.py  test_execution.py  test_isolation.py  test_loader.py  test_model_contract.py  test_permissions.py  test_schema.py  test_storage.py  test_tools.py  test_tutorial.py  test_web_api.py
web/frontend/: Dockerfile  README.md  package-lock.json  package.json
(+31 files in other folders)
