[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpipe"
version = "0.1.0"
description = "An Airflow-inspired pipeline framework for AI agents with multi-model support"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
web = [
    "starlette>=0.37,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "websockets>=12.0,<14.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
    "pre-commit>=3.0",
    "commitizen>=3.0",
    "starlette>=0.37,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "websockets>=12.0,<14.0",
]

[project.scripts]
agentpipe = "agentpipe.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpipe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N802",  # function name should be lowercase (conflicts with stdlib overrides like do_POST, setUp)
    "N803",  # argument name should be lowercase (conflicts with stdlib/pydantic conventions)
]

[tool.ruff.lint.isort]
known-first-party = ["agentpipe"]

# --- Commitizen: conventional commits ---
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "src/agentpipe/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

# Allowed commit types (conventional commits spec)
# feat:     new feature
# fix:      bug fix
# docs:     documentation only
# style:    formatting, no code change
# refactor: code change that neither fixes a bug nor adds a feature
# perf:     performance improvement
# test:     adding or fixing tests
# build:    build system or external dependencies
# ci:       CI configuration
# chore:    other changes that don't modify src or test

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
